--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -12,6 +12,7 @@ ujson>=1.35
 coverage==4.5.4
 flake8==3.7.8
 pytest==5.1.1
+pytest-asyncio==0.10.0
 pytest-runner==5.1
 pytest-cov==2.7.1
 tox==3.13.2
