--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ commit = True
 tag = True
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:fastapi_contrib/__init__.py]
 search = __version__ = '{current_version}'
