--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = py36, py37, flake8
+envlist = py36, py37, py38, flake8
 
 [travis]
 python =
     3.6: py36
     3.7: py37
+    3.8: py38
 
 [testenv:flake8]
 basepython = python
