--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,13 @@
-pip==19.3.1
+pip==20.0.2
 bumpversion==0.5.3
-wheel==0.33.6
-watchdog==0.9.0
-Sphinx==2.3.1
+wheel==0.34.2
+watchdog==0.10.2
+Sphinx==2.4.3
 twine==3.1.1
 
 contextvars==2.4;python_version<"3.7"
-fastapi==0.42.0
+fastapi==0.52.0
+pydantic==1.4
 jaeger-client>=4.1.0
 opentracing>=2.2.0
 motor>=2.0.0
@@ -15,8 +16,8 @@ ujson>=1.35
 
 coverage==5.0.3
 flake8==3.7.9
-pytest==5.3.2
+pytest==5.3.5
 pytest-asyncio==0.10.0
 pytest-runner==5.2
 pytest-cov==2.8.1
-tox==3.14.3
+tox==3.14.5
